# docfmt

./: .gitignore  README.md  dodo.py  noxfile.py  pyprojconf.py  pyproject.toml
src/docfmt/: __init__.py  cli.py  config.py  discovery.py  errors.py  formatter.py  gates.py  interior.py  splice.py  wrap.py
test/: conftest.py  test_blank_lines.py  test_cli.py  test_config.py  test_discovery.py  test_format.py  test_gates.py  test_idempotency.py  test_myst.py  test_position_independence.py  test_splice.py  test_wrap.py
test/corpus/: dataclasses_.py  misc_.py  myst_.py
